log
Fri 23 Sep 2022 11:34:41 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:17: error: invalid initializer
   40 |     TreeMap t = (TreeMap*)malloc(sizeof(TreeMap));
      |                 ^
treemap.c:41:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   41 |     t->root = NULL;
      |      ^~
treemap.c:42:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   42 |     t->current = NULL;
      |      ^~
treemap.c:43:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   43 |     t->lower_than = lower_than;
      |      ^~
Compilation failed
4a9645b
Fri 23 Sep 2022 11:35:05 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
923b152
Fri 23 Sep 2022 11:35:17 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
76a4268
Fri 23 Sep 2022 11:43:53 AM UTC: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:10: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   81 |       if(lower_than(key,p->key)){
      |          ^~~~~~~~~~
treemap.c:82:11: error: assignment to ‘Pair *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
   82 |         p = tree->root->right;
      |           ^
treemap.c:85:11: error: assignment to ‘Pair *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
   85 |         p = tree->root->left;
      |           ^
treemap.c:87:10: error: too few arguments to function ‘is_equal’
   87 |       if(is_equal(p->key,key)){
      |          ^~~~~~~~
In file included from test.c:4:
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
In file included from test.c:4:
treemap.c:88:23: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   88 |         tree->current = p;
      |                       ^
cc1: all warnings being treated as errors
Compilation failed
9ead390
Fri 23 Sep 2022 11:46:45 AM UTC: 
 treemap.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:10: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   82 |       if(lower_than(key,new->pair->key)){
      |          ^~~~~~~~~~
treemap.c:88:25: error: ‘p’ undeclared (first use in this function)
   88 |       if(is_equal(tree, p->key, key)){
      |                         ^
treemap.c:88:25: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
dcbaab7
Fri 23 Sep 2022 11:47:02 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:10: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   82 |       if(lower_than(key,new->pair->key)){
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
31d814d
Fri 23 Sep 2022 11:55:23 AM UTC: 
 treemap.c | 16 ++++++++++------
 1 file changed, 10 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:97:13: error: ‘TreeNode’ has no member named ‘current’
   97 |       if(new->current->left == NULL && new->current->right == NULL){
      |             ^~
treemap.c:97:43: error: ‘TreeNode’ has no member named ‘current’
   97 |       if(new->current->left == NULL && new->current->right == NULL){
      |                                           ^~
Compilation failed
c331139
Fri 23 Sep 2022 11:55:40 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1f00eeb
